[package]
name = "sten"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
notify-rust = "4.10.0"
open = "5.0.2"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
